array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var res=0
  while (i <- 1 until num.length) {
    if (num(i)-num(i-1)==1) {
      res=res+1
    }
  }
  return res
}